    not really used
o Removed ham_enable_compression and the record filters; this function was
    not really used
o Removed ham_get_keycount_per_page; the keycount can still be retrieved
    with ham_get_parameter(... HAM_PARAM_GET_KEYS_PER_PAGE...)
o Removed sorted duplicates; they anyway did not work in combination with
    Transactions. They will be fully implemented at a later stage.

Nov 25, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.5

Nov 16, 2012 - chris ---------------------------------------------------
o Now linking against libtcmalloc_minimal if it's installed

Nov 15, 2012 - chris ---------------------------------------------------
o Performance improvement: insertion of a new record number no longer modifies
	the header page

Oct 25, 2012 - chris ---------------------------------------------------
o (win32) Now creating file with attribute FILE_ATTRIBUTE_NOT_CONTENT_INDEXED
    (thanks, Jake)

Sep 27, 2012 - chris ---------------------------------------------------
o issue #16: Fixed log file switching for temporary Transactions

Sep 25, 2012 - chris ---------------------------------------------------
o Fixed recovery process for temporary Transactions

Aug 30, 2012 - chris ---------------------------------------------------
o Removed HAM_PARAM_GET_STATISTICS; ham/hamsterdb_stats.h is no longer
    public, and the functions are no longer exported

Aug 27, 2012 - chris ---------------------------------------------------
o Renamed HAM_IN_MEMORY_DB to HAM_IN_MEMORY

Aug 12, 2012 - chris ---------------------------------------------------
o The internal C++ implementation was moved into namespace "ham" in order
        to avoid conflicts with other applications

Aug 01, 2012 - chris ---------------------------------------------------
o (dotnet) Fixed invalid memory access when using Parameter[] in
        env.CreateDatabase or env.OpenDatabase (Thanks, Jason)
