@@ -7,6 +7,7 @@ o Removed ham_get_keycount_per_page; the keycount can still be retrieved
     with ham_get_parameter(... HAM_PARAM_GET_KEYS_PER_PAGE...)
 o Removed sorted duplicates; they anyway did not work in combination with
     Transactions. They will be fully implemented at a later stage.
+o Removed ham_flush; use ham_env_flush instead
 
 Nov 25, 2012 - chris ---------------------------------------------------
                       release of hamsterdb-2.0.5
